--- a/assets/style.css
+++ b/assets/style.css
@@ -2,12 +2,197 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-a{
-    text-decoration: none;
+  font-family: regular;
 }
 
-.all {
-  border: 2px solid red;
-  height: 100px;
+@font-face {
+  font-family: regular;
+  src: url(../assets/fonts/Jost-Regular.ttf);
+}
+@font-face {
+  font-family: bold;
+  src: url(../assets/fonts/Jost-Bold.ttf);
+}
+@font-face {
+  font-family: thin;
+  src: url(../assets/fonts/Jost-Light.ttf);
+}
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+header .top {
+  padding: 5px 0;
+}
+header .top .USD {
+  display: flex;
+  justify-content: start;
+}
+header .top .USD .left {
+  margin-right: 15px;
+}
+header .top .USD .left a {
+  color: rgb(101, 101, 101);
+  padding-right: 15px;
+  font-size: 13px;
+  border-right: 1px solid rgb(134, 134, 134);
+  height: 100%;
+}
+header .top .USD .left a i {
+  margin-left: 5px;
+  font-size: 10px !important;
+}
+header .top .USD .right a {
+  height: 100%;
+  color: rgb(101, 101, 101);
+  font-size: 13px;
+}
+header .top .USD .right a i {
+  margin-left: 5px;
+  font-size: 10px !important;
+}
+header .top .social-media {
+  display: flex;
+  justify-content: end;
+}
+header .top .social-media i {
+  margin-right: 25px;
+  font-size: 14px;
+  color: rgb(101, 101, 101);
+}
+header .top .social-media .fa-facebook {
+  position: relative;
+}
+header .top .social-media .fa-facebook::before {
+  content: "\f09a";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  bottom: -2px;
+  transition: 1s all;
+}
+header .top .social-media .fa-facebook:hover {
+  position: relative;
+  bottom: -2, 1px;
+  color: rgb(134, 134, 134);
+  font-size: 15px;
+}
+header .top .social-media .fa-twitter {
+  position: relative;
+}
+header .top .social-media .fa-twitter::before {
+  content: "\f099";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  bottom: -2px;
+  transition: 1s all;
+}
+header .top .social-media .fa-twitter:hover {
+  position: relative;
+  bottom: -2, 1px;
+  color: rgb(134, 134, 134);
+  font-size: 15px;
+}
+header .top .social-media .fa-viber {
+  position: relative;
+}
+header .top .social-media .fa-viber::before {
+  content: "\f409";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  bottom: -2px;
+  transition: 1s all;
+}
+header .top .social-media .fa-viber:hover {
+  position: relative;
+  bottom: -2, 1px;
+  color: rgb(134, 134, 134);
+  font-size: 15px;
+}
+header .top .social-media .fa-whatsapp {
+  position: relative;
+  margin-right: 0 !important;
+}
+header .top .social-media .fa-whatsapp::before {
+  content: "\f232";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  bottom: -2px;
+  transition: 1s all;
+}
+header .top .social-media .fa-whatsapp:hover {
+  position: relative;
+  bottom: -2, 1px;
+  color: rgb(134, 134, 134);
+  font-size: 15px;
+}
+header .mid {
+  padding: 25px 15px;
+}
+header .mid .svgs {
+  display: flex;
+  justify-content: end;
+}
+header .mid .svgs svg {
+  margin-left: 10px;
+}
+header .mid .inputs input {
+  border: 1px solid #e2e2e2;
+  width: 60%;
+  padding: 13px 20px;
+  border-radius: 5px 0 0 5px;
+  font-size: 13px;
+  height: 47px;
+  background: #fff;
+}
+header .mid .inputs input:focus {
+  outline: none;
+}
+header .mid .inputs .all-category-select {
+  display: inline-block;
+  padding: 10px;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #7d7d7d;
+  vertical-align: middle;
+  background: 0 0;
+  background-color: #fff;
+  border: none;
+  border-radius: 0;
+  box-shadow: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  transition: 0.3s ease-in-out;
+  width: 20%;
+  height: 47px;
+  border-top: 1.5px solid var(--theme-gray);
+  border-bottom: 1.5px solid var(--theme-gray);
+}
+header .mid .inputs button {
+  flex-grow: 1;
+  border: none;
+  padding: 0;
+  font-size: 16px;
+  height: 47px;
+  width: 60px;
+  line-height: 46px;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  background-color: #f7ba01;
+}
+header .mid .inputs button svg {
+  color: #fff;
 }/*# sourceMappingURL=style.css.map */
