--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,9 +1,204 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: regular;
 }
-.all{
-    border: 2px solid red;
-    height: 100px;
+@font-face {
+  font-family: regular;
+  src: url(../assets/fonts/Jost-Regular.ttf);
+}
+@font-face {
+  font-family: bold;
+  src: url(../assets/fonts/Jost-Bold.ttf);
+}
+@font-face {
+  font-family: thin;
+  src: url(../assets/fonts/Jost-Light.ttf);
+}
+
+a {
+  text-decoration: none;
+}
+ul {
+  list-style: none;
+}
+
+header {
+  .top {
+    padding: 5px 0;
+    .USD {
+      display: flex;
+      justify-content: start;
+      .left {
+        margin-right: 15px;
+
+        a {
+          color: rgb(101, 101, 101);
+          padding-right: 15px;
+          font-size: 13px;
+          border-right: 1px solid rgb(134, 134, 134);
+          height: 100%;
+          i {
+            margin-left: 5px;
+            font-size: 10px !important;
+          }
+        }
+      }
+      .right {
+        a {
+          height: 100%;
+          color: rgb(101, 101, 101);
+          font-size: 13px;
+          i {
+            margin-left: 5px;
+            font-size: 10px !important;
+          }
+        }
+      }
+    }
+    .social-media {
+      display: flex;
+      justify-content: end;
+      i {
+        margin-right: 25px;
+        font-size: 14px;
+        color: rgb(101, 101, 101);
+      }
+      .fa-facebook {
+        position: relative;
+      }
+      .fa-facebook::before {
+        content: "\f09a";
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+        bottom: -2px;
+        transition: 1s all;
+      }
+      .fa-facebook:hover {
+        position: relative;
+        bottom: -2, 1px;
+        color: rgb(134, 134, 134);
+        font-size: 15px;
+      }
+      .fa-twitter {
+        position: relative;
+      }
+      .fa-twitter::before {
+        content: "\f099";
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+        bottom: -2px;
+        transition: 1s all;
+      }
+      .fa-twitter:hover {
+        position: relative;
+        bottom: -2, 1px;
+        color: rgb(134, 134, 134);
+        font-size: 15px;
+      }
+      .fa-viber {
+        position: relative;
+      }
+      .fa-viber::before {
+        content: "\f409";
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+        bottom: -2px;
+        transition: 1s all;
+      }
+      .fa-viber:hover {
+        position: relative;
+        bottom: -2, 1px;
+        color: rgb(134, 134, 134);
+        font-size: 15px;
+      }
+      .fa-whatsapp {
+        position: relative;
+        margin-right: 0 !important;
+      }
+      .fa-whatsapp::before {
+        content: "\f232";
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+        bottom: -2px;
+        transition: 1s all;
+      }
+      .fa-whatsapp:hover {
+        position: relative;
+        bottom: -2, 1px;
+        color: rgb(134, 134, 134);
+        font-size: 15px;
+      }
+    }
+  }
+  .mid {
+    padding: 25px 15px;
+    .svgs {
+      display: flex;
+      justify-content: end;
+      svg {
+        margin-left: 10px;
+      }
+    }
+    .inputs {
+      input {
+        border: 1px solid #e2e2e2;
+        width: 60%;
+        padding: 13px 20px;
+        border-radius: 5px 0 0 5px;
+        font-size: 13px;
+        height: 47px;
+        background: #fff;
+      }
+      input:focus {
+        outline: none;
+      }
+      .all-category-select {
+        display: inline-block;
+        padding: 10px;
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 1.6;
+        color: #7d7d7d;
+        vertical-align: middle;
+        background: 0 0;
+        background-color: #fff;
+        border: none;
+        border-radius: 0;
+        box-shadow: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        transition: 0.3s ease-in-out;
+        width: 20%;
+        height: 47px;
+        border-top: 1.5px solid var(--theme-gray);
+        border-bottom: 1.5px solid var(--theme-gray);
+      }
+      button {
+        flex-grow: 1;
+        border: none;
+        padding: 0;
+        font-size: 16px;
+        height: 47px;
+        width: 60px;
+        line-height: 46px;
+        border-radius: 0 5px 5px 0;
+        cursor: pointer;
+        background-color: #f7ba01;
+        svg {
+          color: #fff;
+        }
+      }
+    }
+  }
 }
