--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ ul {
 
 header .top {
   padding: 5px 0;
+  background-color: rgb(238, 238, 238);
 }
 header .top .USD {
   display: flex;
@@ -140,16 +141,16 @@ header .top .social-media .fa-whatsapp:hover {
 header .mid {
   padding: 25px 15px;
 }
-header .mid .svgs {
+header .mid .all {
+  align-items: center;
+}
+header .mid .inputs {
   display: flex;
   justify-content: end;
 }
-header .mid .svgs svg {
-  margin-left: 10px;
-}
 header .mid .inputs input {
   border: 1px solid #e2e2e2;
-  width: 60%;
+  width: 50%;
   padding: 13px 20px;
   border-radius: 5px 0 0 5px;
   font-size: 13px;
@@ -176,13 +177,12 @@ header .mid .inputs .all-category-select {
   -moz-appearance: none;
   appearance: none;
   transition: 0.3s ease-in-out;
-  width: 20%;
+  width: 30%;
   height: 47px;
   border-top: 1.5px solid var(--theme-gray);
   border-bottom: 1.5px solid var(--theme-gray);
 }
 header .mid .inputs button {
-  flex-grow: 1;
   border: none;
   padding: 0;
   font-size: 16px;
@@ -195,4 +195,81 @@ header .mid .inputs button {
 }
 header .mid .inputs button svg {
   color: #fff;
+}
+header .svgs {
+  display: flex;
+  justify-content: end;
+}
+header .svgs svg {
+  margin-left: 20px;
+}
+header .svgs .svgCompare {
+  position: relative;
+}
+header .svgs .svgCompare .svg-Compare-span {
+  position: absolute;
+  background-color: #f7ba01;
+  top: -2px;
+  right: -8px;
+  border-radius: 100%;
+  height: 15px;
+  width: 15px;
+  display: flex;
+  justify-content: center;
+}
+header .svgs .svgCompare .svg-Compare-span span {
+  font-size: 10px;
+}
+header .svgs .svgLove {
+  position: relative;
+}
+header .svgs .svgLove .svg-Love-span {
+  position: absolute;
+  background-color: #f7ba01;
+  top: -2px;
+  right: -8px;
+  border-radius: 100%;
+  height: 15px;
+  width: 15px;
+  display: flex;
+  justify-content: center;
+}
+header .svgs .svgLove .svg-Love-span span {
+  font-size: 10px;
+}
+header .svgs .shopBag {
+  position: relative;
+}
+header .svgs .shopBag .svg-shopBag-span {
+  position: absolute;
+  background-color: #f7ba01;
+  top: -2px;
+  right: -8px;
+  border-radius: 100%;
+  height: 15px;
+  width: 15px;
+  display: flex;
+  justify-content: center;
+}
+header .svgs .shopBag .svg-shopBag-span span {
+  font-size: 10px;
+}
+header .buttom {
+  background-color: #0465D2;
+  padding: 25px 0;
+}
+header .buttom .button-all-categories {
+  background-color: #025bbf;
+  color: white;
+  padding: 25px 0;
+  padding-right: 50px;
+  padding-left: 25px;
+  font-size: 14px !important;
+  font-family: bold;
+}
+header .buttom .button-all-categories i {
+  margin-right: 20px;
+}
+header .buttom .button-all-categories .fa-angle-down {
+  margin-left: 20px;
 }/*# sourceMappingURL=style.css.map */
