--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,17 +4,19 @@
   box-sizing: border-box;
   font-family: regular;
 }
+@import "_responsive.scss";
+
 @font-face {
   font-family: regular;
-  src: url(../assets/fonts/Jost-Regular.ttf);
+  src: url(../fonts/Jost-Medium.ttf);
 }
 @font-face {
   font-family: bold;
-  src: url(../assets/fonts/Jost-Bold.ttf);
+  src: url(../fonts/Jost-Bold.ttf);
 }
 @font-face {
   font-family: thin;
-  src: url(../assets/fonts/Jost-Light.ttf);
+  src: url(../fonts/Jost-Light.ttf);
 }
 
 a {
@@ -143,10 +145,10 @@ header {
   }
   .mid {
     padding: 25px 15px;
-    .all{
+    .all {
       align-items: center;
     }
-  
+
     .inputs {
       display: flex;
       justify-content: end;
@@ -184,7 +186,7 @@ header {
         border-top: 1.5px solid var(--theme-gray);
         border-bottom: 1.5px solid var(--theme-gray);
       }
-      button {        
+      button {
         border: none;
         padding: 0;
         font-size: 16px;
@@ -200,91 +202,97 @@ header {
       }
     }
   }
-  .svgs{
-    
-      display: flex;
-      justify-content: end;
-      svg {
-        margin-left: 20px;
-      } 
-    
-    .svgCompare{
+  .svgs {
+    display: flex;
+    justify-content: end;
+    svg {
+      margin-left: 20px;
+    }
+
+    .svgCompare {
       position: relative;
-      .svg-Compare-span{
+      .svg-Compare-span {
         position: absolute;
-        background-color: #f7ba01;        
+        background-color: #f7ba01;
         top: -2px;
         right: -8px;
         border-radius: 100%;
         height: 15px;
-        width : 15px;
+        width: 15px;
         display: flex;
         justify-content: center;
-        
-          span{
-            font-size: 10px;
-          } 
+
+        span {
+          font-size: 10px;
+        }
       }
     }
-    .svgLove{
+    .svgLove {
       position: relative;
-      .svg-Love-span{
+      .svg-Love-span {
         position: absolute;
-        background-color: #f7ba01;        
+        background-color: #f7ba01;
         top: -2px;
         right: -8px;
         border-radius: 100%;
         height: 15px;
-        width : 15px;
+        width: 15px;
         display: flex;
         justify-content: center;
-        
-          span{
-            font-size: 10px;
-          } 
+
+        span {
+          font-size: 10px;
+        }
       }
     }
-    .shopBag{
+    .shopBag {
       position: relative;
-      .svg-shopBag-span{
+      .svg-shopBag-span {
         position: absolute;
-        background-color: #f7ba01;        
+        background-color: #f7ba01;
         top: -2px;
         right: -8px;
         border-radius: 100%;
         height: 15px;
-        width : 15px;
+        width: 15px;
         display: flex;
         justify-content: center;
-        
-          span{
-            font-size: 10px;
-          } 
+
+        span {
+          font-size: 10px;
+        }
       }
     }
   }
-  .buttom{
-    background-color:#0465D2;
+  .buttom {
+    background-color: #0465d2;
     padding: 25px 0;
-    
-    .button-all-categories{
-      background-color: #025bbf ;
+
+    .button-all-categories {
+      background-color: #025bbf;
       color: white;
       padding: 25px 0;
       padding-right: 50px;
-      padding-left: 25px;      
+      padding-left: 25px;
       font-size: 14px !important;
       font-family: bold;
-      
-      i{
-        
+
+      i {
         margin-right: 20px;
       }
-      .fa-angle-down{
+      .fa-angle-down {
         margin-left: 20px;
       }
-      
-      
+    }
+    .right-categories {
+      display: flex;
+      justify-content: end;
+      a {
+        font-size: 14px !important;
+        color: #e2e2e2;
+        font-family: bold;
+        margin-left: 35px;
+      }
     }
   }
 }
