--- a/assets/css/_responsive.scss
+++ b/assets/css/_responsive.scss
@@ -1,24 +1,274 @@
-@media(max-width:576px){
-    header{
-        .top{.all{
+@media (max-width: 576px) {
+  header {
+    .top {
+      .all {
+        display: flex;
+        align-items: center !important;
+        padding: 13px 0;
+        a {
+          font-size: 13px !important;
+          font-family: thin !important;
+        }
+        .social-media{
             display: flex;
-            align-items: center;
-            padding: 13px 0;
-            a{
-                font-size: 13px !important;
-                font-family: thin !important;
+            justify-content: start !important;
+        }
+        .USD{
+            display: flex;
+            justify-content: end;
+            margin-left: 10px;
+        }
+      }
+    }
+    .mid {
+      display: none;
+    }
+    .buttom {
+      display: none;
+    }
+    .header-tablet {
+      display: none;
+    }
+    .header-phone {
+      display: block;
+      background-color: #0465d2;
+      .all-phone-header {
+        padding: 26px 0;
+        i {
+          font-size: 30px;
+          color: white;
+          margin-right: 20px;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 576px) and (max-width: 768px) {
+  header {
+    .top {
+      .all {
+        display: flex !important;
+        align-items: center !important;
+        padding: 13px 0;
+        a {
+          font-size: 13px !important;
+          font-family: thin !important;
+        }
+        .USD {
+          display: flex;
+          justify-content: end;
+        }
+        .social-media {
+          display: flex;
+          justify-content: start;
+          margin-right: 10px;
+        }
+      }
+    }
+    .mid {
+      display: none;
+    }
+    .buttom {
+      display: none;
+    }
+    .header-phone {
+      display: none;
+    }
+    .header-tablet {
+      display: block;
+      background-color: #0465d2;
+      padding: 26px 0 ;
+      
+        i {
+            font-size: 30px;
+            color: white;
+            margin-right: 20px;
+          }
+          img{
+            margin-left: 15px;
+          }
+    }
+  }
+}
+@media (min-width: 768px) and (max-width: 992px) {
+    header{
+        .buttom {
+            display: none;
+          }
+          .header-phone {
+            display: none;
+          }
+        .top{
+            .container{
+                padding: 0px !important;
+                margin: 0px !important;
+                max-width: 100% !important;
+                .all {      
+               
+                   
+                    padding: 15px 15px;
+                    
+                    a {
+                      font-size: 13px !important;
+                      font-family: thin !important;
+                    }
+                    .social-media{
+                        display: flex;
+                        justify-content: end;
+                    }
+                }
             }
-        }
-        }
-        .mid{
-            display: none;
-        }
-        .buttom{
-            display: none;
-        }
+        }                
+           
+          
+          .mid {
+            .mid-img{
+                display: none;
+            }
+            .container{
+                padding: 0;
+                margin: 0;
+                max-width: 100% !important;
+            }
+            .all{
+                padding: 0 15px 0 0;
+                display: flex;
+                align-items: center;
+                .svgs{
+                    display: flex;
+                    justify-content: end;
+                }
+                .inputs{
+                    display: flex;
+                    justify-content: start !important;
+                }
+            }
+          }
+          .header-tablet {
+            display: block;
+            background-color: #0465d2;
+            padding: 26px 0 ;
+           
+            
+              i {
+                  font-size: 30px;
+                  color: white;
+                  margin-right: 20px;
+                }
+                img{
+                  margin-left: 15px;
+                }
+          }
 
     }
+      
+}
+@media (min-width: 992px) and (max-width: 1024px){
+    header{
+        .header-phone {
+            display: none;
+          }
+          .header-tablet {
+            display: none;
+          }
+        .top{
+            .container{
+                padding: 0px !important;
+                margin: 0px !important;
+                max-width: 100% !important;
+                .all {      
+               
+                   
+                    padding: 15px 15px;
+                    
+                    a {
+                      font-size: 13px !important;
+                      font-family: thin !important;
+                    }
+                    .social-media{
+                        display: flex;
+                        justify-content: end;
+                    }
+                }
+            }
+        }                
+           
+          
+          .mid {
+            .mid-img{
+                display: none;
+            }
+            .container{
+                padding: 0;
+                margin: 0;
+                max-width: 100% !important;
+            }
+            .all{
+                padding: 0 15px 0 0;
+                display: flex;
+                align-items: center;
+                .svgs{
+                    display: flex;
+                    justify-content: end;
+                }
+                .inputs{
+                    display: flex;
+                    justify-content: start !important;
+                }
+            }
+          }
+          .buttom{
+            .container{
+                padding: 0px !important;
+                margin: 0px !important;
+                max-width: 100% !important;
+                .row{
+                   
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    .left-categories{
+                        padding: 0 20px;
+                        
+                        width: 20%;
+                        .button-all-categories{
+                            padding: 25px 0;
+                            font-size: 14px;
+                            i {
+                                margin-right: 0 ;
+                              }
+                              .fa-angle-down {
+                                margin-left: 0;
+                              }
+                           
+                        }
+                    }
+                    .right-categories{
+                        width: 80%;
+                        margin: 0;
+                        padding: 0;
+                        display: flex;
+                        justify-content: start;
+                    }
+                }
+            }
+          }
 
+    }
     
-    
+     
+
+}
+@media (min-width: 1140px) {
+    header{
+        .header-phone {
+            display: none;
+          }
+          .header-tablet {
+            display: none;
+          }
+
+    }
+ 
 }
