--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,17 +8,225 @@
 @media (max-width: 576px) {
   header .top .all {
     display: flex;
-    align-items: center;
+    align-items: center !important;
     padding: 13px 0;
   }
   header .top .all a {
     font-size: 13px !important;
     font-family: thin !important;
   }
+  header .top .all .social-media {
+    display: flex;
+    justify-content: start !important;
+  }
+  header .top .all .USD {
+    display: flex;
+    justify-content: end;
+    margin-left: 10px;
+  }
   header .mid {
     display: none;
   }
   header .buttom {
+    display: none;
+  }
+  header .header-tablet {
+    display: none;
+  }
+  header .header-phone {
+    display: block;
+    background-color: #0465d2;
+  }
+  header .header-phone .all-phone-header {
+    padding: 26px 0;
+  }
+  header .header-phone .all-phone-header i {
+    font-size: 30px;
+    color: white;
+    margin-right: 20px;
+  }
+}
+@media (min-width: 576px) and (max-width: 768px) {
+  header .top .all {
+    display: flex !important;
+    align-items: center !important;
+    padding: 13px 0;
+  }
+  header .top .all a {
+    font-size: 13px !important;
+    font-family: thin !important;
+  }
+  header .top .all .USD {
+    display: flex;
+    justify-content: end;
+  }
+  header .top .all .social-media {
+    display: flex;
+    justify-content: start;
+    margin-right: 10px;
+  }
+  header .mid {
+    display: none;
+  }
+  header .buttom {
+    display: none;
+  }
+  header .header-phone {
+    display: none;
+  }
+  header .header-tablet {
+    display: block;
+    background-color: #0465d2;
+    padding: 26px 0;
+  }
+  header .header-tablet i {
+    font-size: 30px;
+    color: white;
+    margin-right: 20px;
+  }
+  header .header-tablet img {
+    margin-left: 15px;
+  }
+}
+@media (min-width: 768px) and (max-width: 992px) {
+  header .buttom {
+    display: none;
+  }
+  header .header-phone {
+    display: none;
+  }
+  header .top .container {
+    padding: 0px !important;
+    margin: 0px !important;
+    max-width: 100% !important;
+  }
+  header .top .container .all {
+    padding: 15px 15px;
+  }
+  header .top .container .all a {
+    font-size: 13px !important;
+    font-family: thin !important;
+  }
+  header .top .container .all .social-media {
+    display: flex;
+    justify-content: end;
+  }
+  header .mid .mid-img {
+    display: none;
+  }
+  header .mid .container {
+    padding: 0;
+    margin: 0;
+    max-width: 100% !important;
+  }
+  header .mid .all {
+    padding: 0 15px 0 0;
+    display: flex;
+    align-items: center;
+  }
+  header .mid .all .svgs {
+    display: flex;
+    justify-content: end;
+  }
+  header .mid .all .inputs {
+    display: flex;
+    justify-content: start !important;
+  }
+  header .header-tablet {
+    display: block;
+    background-color: #0465d2;
+    padding: 26px 0;
+  }
+  header .header-tablet i {
+    font-size: 30px;
+    color: white;
+    margin-right: 20px;
+  }
+  header .header-tablet img {
+    margin-left: 15px;
+  }
+}
+@media (min-width: 992px) and (max-width: 1024px) {
+  header .header-phone {
+    display: none;
+  }
+  header .header-tablet {
+    display: none;
+  }
+  header .top .container {
+    padding: 0px !important;
+    margin: 0px !important;
+    max-width: 100% !important;
+  }
+  header .top .container .all {
+    padding: 15px 15px;
+  }
+  header .top .container .all a {
+    font-size: 13px !important;
+    font-family: thin !important;
+  }
+  header .top .container .all .social-media {
+    display: flex;
+    justify-content: end;
+  }
+  header .mid .mid-img {
+    display: none;
+  }
+  header .mid .container {
+    padding: 0;
+    margin: 0;
+    max-width: 100% !important;
+  }
+  header .mid .all {
+    padding: 0 15px 0 0;
+    display: flex;
+    align-items: center;
+  }
+  header .mid .all .svgs {
+    display: flex;
+    justify-content: end;
+  }
+  header .mid .all .inputs {
+    display: flex;
+    justify-content: start !important;
+  }
+  header .buttom .container {
+    padding: 0px !important;
+    margin: 0px !important;
+    max-width: 100% !important;
+  }
+  header .buttom .container .row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  header .buttom .container .row .left-categories {
+    padding: 0 20px;
+    width: 20%;
+  }
+  header .buttom .container .row .left-categories .button-all-categories {
+    padding: 25px 0;
+    font-size: 14px;
+  }
+  header .buttom .container .row .left-categories .button-all-categories i {
+    margin-right: 0;
+  }
+  header .buttom .container .row .left-categories .button-all-categories .fa-angle-down {
+    margin-left: 0;
+  }
+  header .buttom .container .row .right-categories {
+    width: 80%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: start;
+  }
+}
+@media (min-width: 1140px) {
+  header .header-phone {
+    display: none;
+  }
+  header .header-tablet {
     display: none;
   }
 }
