--- a/assets/css/_responsive.scss
+++ b/assets/css/_responsive.scss
@@ -9,14 +9,14 @@
           font-size: 13px !important;
           font-family: thin !important;
         }
-        .social-media{
-            display: flex;
-            justify-content: start !important;
+        .social-media {
+          display: flex;
+          justify-content: start !important;
         }
-        .USD{
-            display: flex;
-            justify-content: end;
-            margin-left: 10px;
+        .USD {
+          display: flex;
+          justify-content: end;
+          margin-left: 10px;
         }
       }
     }
@@ -78,197 +78,293 @@
     .header-tablet {
       display: block;
       background-color: #0465d2;
-      padding: 26px 0 ;
-      
-        i {
-            font-size: 30px;
-            color: white;
-            margin-right: 20px;
-          }
-          img{
-            margin-left: 15px;
-          }
+      padding: 26px 0;
+
+      i {
+        font-size: 30px;
+        color: white;
+        margin-right: 20px;
+      }
+      img {
+        margin-left: 15px;
+      }
     }
   }
 }
 @media (min-width: 768px) and (max-width: 992px) {
-    header{
-        .buttom {
-            display: none;
+  header {
+    .buttom {
+      display: none;
+    }
+    .header-phone {
+      display: none;
+    }
+    .top {
+      .container {
+        padding: 0px !important;
+        margin: 0px !important;
+        max-width: 100% !important;
+        .all {
+          padding: 15px 15px;
+
+          a {
+            font-size: 13px !important;
+            font-family: thin !important;
           }
-          .header-phone {
-            display: none;
+          .social-media {
+            display: flex;
+            justify-content: end;
           }
-        .top{
-            .container{
-                padding: 0px !important;
-                margin: 0px !important;
-                max-width: 100% !important;
-                .all {      
-               
-                   
-                    padding: 15px 15px;
-                    
-                    a {
-                      font-size: 13px !important;
-                      font-family: thin !important;
-                    }
-                    .social-media{
-                        display: flex;
-                        justify-content: end;
-                    }
-                }
-            }
-        }                
-           
-          
-          .mid {
-            .mid-img{
-                display: none;
-            }
-            .container{
-                padding: 0;
-                margin: 0;
-                max-width: 100% !important;
-            }
-            .all{
-                padding: 0 15px 0 0;
-                display: flex;
-                align-items: center;
-                .svgs{
-                    display: flex;
-                    justify-content: end;
-                }
-                .inputs{
-                    display: flex;
-                    justify-content: start !important;
-                }
-            }
+        }
+      }
+    }
+
+    .mid {
+      .mid-img {
+        display: none;
+      }
+      .container {
+        padding: 0;
+        margin: 0;
+        max-width: 100% !important;
+      }
+      .all {
+        padding: 0 15px 0 0;
+        display: flex;
+        align-items: center;
+        .svgs {
+          display: flex;
+          justify-content: end;
+        }
+        .inputs {
+          display: flex;
+          justify-content: start !important;
+        }
+      }
+    }
+    .header-tablet {
+      display: block;
+      background-color: #0465d2;
+      padding: 26px 0;
+
+      i {
+        font-size: 30px;
+        color: white;
+        margin-right: 20px;
+      }
+      img {
+        margin-left: 15px;
+      }
+    }
+  }
+}
+@media (min-width: 992px) and (max-width: 1024px) {
+  header {
+    .header-phone {
+      display: none;
+    }
+    .header-tablet {
+      display: none;
+    }
+    .top {
+      .container {
+        padding: 0px !important;
+        margin: 0px !important;
+        max-width: 100% !important;
+        .all {
+          padding: 15px 15px;
+
+          a {
+            font-size: 13px !important;
+            font-family: thin !important;
           }
-          .header-tablet {
-            display: block;
-            background-color: #0465d2;
-            padding: 26px 0 ;
-           
-            
+          .social-media {
+            display: flex;
+            justify-content: end;
+          }
+        }
+      }
+    }
+
+    .mid {
+      .mid-img {
+        display: none;
+      }
+      .container {
+        padding: 0;
+        margin: 0;
+        max-width: 100% !important;
+      }
+      .all {
+        padding: 0 15px 0 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .svgs {
+          display: flex;
+          justify-content: end;
+        }
+        .inputs {
+          display: flex;
+          justify-content: start !important;
+          width: 50% !important;
+        }
+      }
+    }
+    .buttom {
+      padding: 5px 0 !important;
+      .container {
+        padding: 0px !important;
+        margin: 0px !important;
+        max-width: 100% !important;
+        .all-buttom {
+          display: flex;
+          align-items: center;
+          justify-content: space-between !important;
+          .left-categories {
+            padding: 0 0 0 30px;
+
+            width: 20%;
+            .button-all-categories {
+              padding: 25px 4px;
+              font-size: 14px;
+              display: block;
+
               i {
-                  font-size: 30px;
-                  color: white;
-                  margin-right: 20px;
-                }
-                img{
-                  margin-left: 15px;
-                }
+                margin-right: 0;
+              }
+              .fa-angle-down {
+                margin-left: 10px;
+              }
+              .fa-bars {
+                margin-right: 10px;
+              }
+            }
           }
-
+          .right-categories {
+            width: 80%;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: start;
+          }
+        }
+      }
     }
-      
+  }
 }
-@media (min-width: 992px) and (max-width: 1024px){
-    header{
-        .header-phone {
-            display: none;
-          }
-          .header-tablet {
-            display: none;
-          }
-        .top{
-            .container{
-                padding: 0px !important;
-                margin: 0px !important;
-                max-width: 100% !important;
-                .all {      
-               
-                   
-                    padding: 15px 15px;
-                    
-                    a {
-                      font-size: 13px !important;
-                      font-family: thin !important;
-                    }
-                    .social-media{
-                        display: flex;
-                        justify-content: end;
-                    }
-                }
-            }
-        }                
-           
-          
-          .mid {
-            .mid-img{
-                display: none;
-            }
-            .container{
-                padding: 0;
-                margin: 0;
-                max-width: 100% !important;
-            }
-            .all{
-                padding: 0 15px 0 0;
-                display: flex;
-                align-items: center;
-                .svgs{
-                    display: flex;
-                    justify-content: end;
-                }
-                .inputs{
-                    display: flex;
-                    justify-content: start !important;
-                }
-            }
-          }
-          .buttom{
-            .container{
-                padding: 0px !important;
-                margin: 0px !important;
-                max-width: 100% !important;
-                .row{
-                   
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-                    .left-categories{
-                        padding: 0 20px;
-                        
-                        width: 20%;
-                        .button-all-categories{
-                            padding: 25px 0;
-                            font-size: 14px;
-                            i {
-                                margin-right: 0 ;
-                              }
-                              .fa-angle-down {
-                                margin-left: 0;
-                              }
-                           
-                        }
-                    }
-                    .right-categories{
-                        width: 80%;
-                        margin: 0;
-                        padding: 0;
-                        display: flex;
-                        justify-content: start;
-                    }
-                }
-            }
-          }
-
+@media (min-width: 1024px) and (max-width: 1140px) {
+  header {
+    .header-phone {
+      display: none;
     }
-    
-     
-
+    .header-tablet {
+      display: none;
+    }
+    .top {
+      .container {
+        margin: 0;
+        padding: 0 10px;
+        max-width: 100% !important;
+      }
+    }
+    .mid {
+      .container {
+        margin: 0;
+        padding: 0 10px;
+        max-width: 100% !important;
+      }
+    }
+    .buttom {
+      padding: 0 !important;
+      margin: 0 !important;
+      .container {
+        padding: 0 15px !important;
+        margin: 0;
+        max-width: 100% !important;
+        .button-all-categories {
+          margin: 0;
+          padding: 30px 0 30px 10px;
+          display: flex;
+          align-items: center;
+        }
+        .right-categories {
+          padding: 0;
+          margin: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          i {
+            margin-left: 10px;
+          }
+          a{
+            margin: 0 0 0 15px;
+          }
+        }
+      }
+    }
+  }
 }
-@media (min-width: 1140px) {
-    header{
-        .header-phone {
-            display: none;
-          }
-          .header-tablet {
-            display: none;
-          }
 
+@media (min-width: 1140px) and (max-width:1400px) {
+  header {
+    .header-phone {
+      display: none;
     }
- 
+    .header-tablet {
+      display: none;
+    }
+    .top {
+      .container {
+        margin: 0;
+        padding: 0 10px;
+        max-width: 100% !important;
+      }
+    }
+    .mid {
+      .container {
+        margin: 0;
+        padding: 0 10px;
+        max-width: 100% !important;
+      }
+    }
+    .buttom {
+      padding: 0 !important;
+      margin: 0 !important;
+      .container {
+        padding: 0 15px !important;
+        margin: 0;
+        max-width: 100% !important;
+        .button-all-categories {
+          margin: 0;
+          padding: 30px 0 30px 10px;
+          display: flex;
+          align-items: center;
+        }
+        .right-categories {
+          padding: 0;
+          margin: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          i {
+            margin-left: 10px;
+          }
+          a{
+            margin: 0 0 0 15px;
+          }
+        }
+      }
+    }
+  }
+}
+@media(min-width:1400px){
+  header {
+    .header-phone {
+      display: none;
+    }
+    .header-tablet {
+      display: none;
+    }
+  }
 }
