--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,6 +180,7 @@
   header .mid .all {
     padding: 0 15px 0 0;
     display: flex;
+    justify-content: space-between;
     align-items: center;
   }
   header .mid .all .svgs {
@@ -189,32 +190,40 @@
   header .mid .all .inputs {
     display: flex;
     justify-content: start !important;
+    width: 50% !important;
+  }
+  header .buttom {
+    padding: 5px 0 !important;
   }
   header .buttom .container {
     padding: 0px !important;
     margin: 0px !important;
     max-width: 100% !important;
   }
-  header .buttom .container .row {
+  header .buttom .container .all-buttom {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-between !important;
   }
-  header .buttom .container .row .left-categories {
-    padding: 0 20px;
+  header .buttom .container .all-buttom .left-categories {
+    padding: 0 0 0 30px;
     width: 20%;
   }
-  header .buttom .container .row .left-categories .button-all-categories {
-    padding: 25px 0;
+  header .buttom .container .all-buttom .left-categories .button-all-categories {
+    padding: 25px 4px;
     font-size: 14px;
+    display: block;
   }
-  header .buttom .container .row .left-categories .button-all-categories i {
+  header .buttom .container .all-buttom .left-categories .button-all-categories i {
     margin-right: 0;
   }
-  header .buttom .container .row .left-categories .button-all-categories .fa-angle-down {
-    margin-left: 0;
+  header .buttom .container .all-buttom .left-categories .button-all-categories .fa-angle-down {
+    margin-left: 10px;
   }
-  header .buttom .container .row .right-categories {
+  header .buttom .container .all-buttom .left-categories .button-all-categories .fa-bars {
+    margin-right: 10px;
+  }
+  header .buttom .container .all-buttom .right-categories {
     width: 80%;
     margin: 0;
     padding: 0;
@@ -222,7 +231,99 @@
     justify-content: start;
   }
 }
-@media (min-width: 1140px) {
+@media (min-width: 1024px) and (max-width: 1140px) {
+  header .header-phone {
+    display: none;
+  }
+  header .header-tablet {
+    display: none;
+  }
+  header .top .container {
+    margin: 0;
+    padding: 0 10px;
+    max-width: 100% !important;
+  }
+  header .mid .container {
+    margin: 0;
+    padding: 0 10px;
+    max-width: 100% !important;
+  }
+  header .buttom {
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+  header .buttom .container {
+    padding: 0 15px !important;
+    margin: 0;
+    max-width: 100% !important;
+  }
+  header .buttom .container .button-all-categories {
+    margin: 0;
+    padding: 30px 0 30px 10px;
+    display: flex;
+    align-items: center;
+  }
+  header .buttom .container .right-categories {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  header .buttom .container .right-categories i {
+    margin-left: 10px;
+  }
+  header .buttom .container .right-categories a {
+    margin: 0 0 0 15px;
+  }
+}
+@media (min-width: 1140px) and (max-width: 1400px) {
+  header .header-phone {
+    display: none;
+  }
+  header .header-tablet {
+    display: none;
+  }
+  header .top .container {
+    margin: 0;
+    padding: 0 10px;
+    max-width: 100% !important;
+  }
+  header .mid .container {
+    margin: 0;
+    padding: 0 10px;
+    max-width: 100% !important;
+  }
+  header .buttom {
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+  header .buttom .container {
+    padding: 0 15px !important;
+    margin: 0;
+    max-width: 100% !important;
+  }
+  header .buttom .container .button-all-categories {
+    margin: 0;
+    padding: 30px 0 30px 10px;
+    display: flex;
+    align-items: center;
+  }
+  header .buttom .container .right-categories {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  header .buttom .container .right-categories i {
+    margin-left: 10px;
+  }
+  header .buttom .container .right-categories a {
+    margin: 0 0 0 15px;
+  }
+}
+@media (min-width: 1400px) {
   header .header-phone {
     display: none;
   }
