added nice select

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,7 @@
   font-family: regular;
 }
 @import "_responsive.scss";
+@import '_nice-select'; 
 
 @font-face {
   font-family: regular;
@@ -195,8 +196,8 @@ header {
         outline: none;
       }
       .all-category-select {
-        display: inline-block;
-        padding: 10px;
+       
+        
         font-size: 13px;
         font-weight: 400;
         line-height: 1.6;
@@ -211,7 +212,7 @@ header {
         -moz-appearance: none;
         appearance: none;
         transition: 0.3s ease-in-out;
-        width: 30%;
+        width: 25%;
         height: 47px;
         border-top: 1.5px solid #e2e2e2;
         border-bottom: 1.5px solid #e2e2e2;
@@ -313,6 +314,38 @@ header {
       .fa-angle-down {
         margin-left: 20px;
       }
+    }
+    .all-catogories-catalog{
+      width: 275.5px;
+      position: fixed ;
+      background: #fff;
+      color: #7d7d7d;
+      top: 205px;
+      height: 0 !important;
+      ul{
+        padding: 0;
+       
+        li{
+          padding: 5px 50px 5px 20px;
+          margin: 15px 0;
+          font-size: 14px;
+          display: flex;
+          align-items: center;
+          transition: 1s all;
+          i{
+           position: absolute;           
+           right: 20px;
+           font-size: 10px;
+           
+          }
+          &:hover{
+            color: #0465d2;
+            background-color:#e2e2e2;
+          }
+        }
+
+      }
+      
     }
     .right-categories {
       display: flex;
