--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,6 +331,156 @@
     display: none;
   }
 }
+.nice-select {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background-color: #fff;
+  border-radius: 5px;
+  box-sizing: border-box;
+  clear: both;
+  cursor: pointer;
+  display: block;
+  float: left;
+  font-family: inherit;
+  font-size: 14px;
+  font-weight: normal;
+  height: 42px;
+  line-height: 40px;
+  outline: none !important;
+  padding-left: 20px;
+  padding-right: 52px;
+  position: relative;
+  text-align: left !important;
+  transition: all 0.2s ease-in-out;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  white-space: nowrap;
+  width: 100%;
+}
+.nice-select:hover {
+  border-color: #dbdbdb;
+}
+.nice-select:active, .nice-select.open, .nice-select:focus {
+  border-color: #999;
+}
+.nice-select:after {
+  border-bottom: 2px solid #999;
+  border-right: 2px solid #999;
+  content: "";
+  display: block;
+  height: 5px;
+  margin-top: -4px;
+  pointer-events: none;
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform-origin: 66% 66%;
+  transform: rotate(45deg);
+  transition: all 0.15s ease-in-out;
+  width: 5px;
+}
+.nice-select.open:after {
+  transform: rotate(-135deg);
+}
+.nice-select.open .list {
+  opacity: 1;
+  pointer-events: auto;
+  transform: scale(1) translateY(0);
+}
+.nice-select.disabled {
+  border-color: #ededed;
+  color: #999;
+  pointer-events: none;
+}
+.nice-select.disabled:after {
+  border-color: #cccccc;
+}
+.nice-select.wide {
+  width: 100%;
+}
+.nice-select.wide .list {
+  left: 0 !important;
+  right: 0 !important;
+}
+.nice-select.right {
+  float: right;
+}
+.nice-select.right .list {
+  left: auto;
+  right: 0;
+}
+.nice-select.small {
+  font-size: 12px;
+  height: 36px;
+  line-height: 34px;
+}
+.nice-select.small:after {
+  height: 4px;
+  width: 4px;
+}
+.nice-select.small .option {
+  line-height: 34px;
+  min-height: 34px;
+}
+.nice-select .list {
+  background-color: #fff;
+  box-shadow: 0 0 0 1px rgba(68, 68, 68, 0.11);
+  box-sizing: border-box;
+  margin-top: 4px;
+  opacity: 0;
+  overflow: hidden;
+  padding: 0;
+  pointer-events: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  transform-origin: 50% 0;
+  transform: scale(0.75) translateY(-21px);
+  transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
+  z-index: 9;
+}
+.nice-select .list:hover .option:not(:hover) {
+  background-color: transparent !important;
+}
+.nice-select .option {
+  cursor: pointer;
+  font-weight: 400;
+  line-height: 40px;
+  list-style: none;
+  min-height: 40px;
+  outline: none;
+  padding-left: 20px;
+  padding-right: 51px;
+  text-align: left;
+  transition: all 0.2s;
+}
+.nice-select .option:hover, .nice-select .option.focus, .nice-select .option.selected.focus {
+  background-color: #ff6000;
+}
+.nice-select .option.selected.focus {
+  background-color: black;
+  z-index: 9;
+}
+.nice-select .option:hover {
+  color: white;
+}
+.nice-select .option.selected {
+  font-weight: bold;
+}
+.nice-select .option.disabled {
+  background-color: transparent;
+  color: #999;
+  cursor: default;
+}
+
+.no-csspointerevents .nice-select .list {
+  display: none;
+}
+.no-csspointerevents .nice-select.open .list {
+  display: block;
+}
+
 @font-face {
   font-family: regular;
   src: url(../fonts/Jost-Medium.ttf);
@@ -517,8 +667,6 @@ header .mid .inputs input:focus {
   outline: none;
 }
 header .mid .inputs .all-category-select {
-  display: inline-block;
-  padding: 10px;
   font-size: 13px;
   font-weight: 400;
   line-height: 1.6;
@@ -533,7 +681,7 @@ header .mid .inputs .all-category-select {
   -moz-appearance: none;
   appearance: none;
   transition: 0.3s ease-in-out;
-  width: 30%;
+  width: 25%;
   height: 47px;
   border-top: 1.5px solid #e2e2e2;
   border-bottom: 1.5px solid #e2e2e2;
@@ -628,6 +776,34 @@ header .buttom .button-all-categories i {
 }
 header .buttom .button-all-categories .fa-angle-down {
   margin-left: 20px;
+}
+header .buttom .all-catogories-catalog {
+  width: 275.5px;
+  position: fixed;
+  background: #fff;
+  color: #7d7d7d;
+  top: 205px;
+  height: 0 !important;
+}
+header .buttom .all-catogories-catalog ul {
+  padding: 0;
+}
+header .buttom .all-catogories-catalog ul li {
+  padding: 5px 50px 5px 20px;
+  margin: 15px 0;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  transition: 1s all;
+}
+header .buttom .all-catogories-catalog ul li i {
+  position: absolute;
+  right: 20px;
+  font-size: 10px;
+}
+header .buttom .all-catogories-catalog ul li:hover {
+  color: #0465d2;
+  background-color: #e2e2e2;
 }
 header .buttom .right-categories {
   display: flex;
