--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -317,13 +317,12 @@ header {
     }
     .all-catogories-catalog{
       width: 275.5px;
-      position: fixed ;
-      background: #fff;
+      position: fixed ;      
       color: #7d7d7d;
-      top: 205px;
-      height: 0 !important;
+      top: 205px;      
       ul{
         padding: 0;
+        background-color:#fff;
        
         li{
           padding: 5px 50px 5px 20px;
@@ -332,6 +331,8 @@ header {
           display: flex;
           align-items: center;
           transition: 1s all;
+          cursor: pointer;
+
           i{
            position: absolute;           
            right: 20px;
@@ -350,12 +351,83 @@ header {
     .right-categories {
       display: flex;
       justify-content: end;
+      .home-cataloge-1{
+        position: relative;
+        .home-cataloge-2{
+          position: fixed;
+          top: 210px;         
+          height: 0 ;
+          overflow: hidden;          
+          transition: .8s all ;
+          width: 300px;
+          opacity: 0;
+          visibility: hidden;
+          P{
+            margin-left: 20px;
+            color: #7d7d7d;
+            cursor: pointer;
+            &:hover{
+              color: #0465d2;
+            }
+            &:focus-visible{
+              color: red;
+            }
+          }
+        }
+        &::before{
+          content: "";
+          height: 6px;
+          background-color: #f7ba01;
+          width: 0;
+          bottom: -24px;
+          left: 0;
+          position: absolute;
+          transition: .5s all;
+          border-radius: 10px;
+        }
+        
+        &:hover{
+          &::before{
+            width: 100%;
+          }
+          & .home-cataloge-2{
+            background-color: #ffffff;            
+            height: 310px;
+            opacity: 1;
+            visibility: visible;
+            
+          }         
+        }
+
+      }
       a {
         font-size: 14px !important;
         color: #e2e2e2;
         font-family: bold;
-        margin-left: 35px;
+        margin-left: 35px;  
+       
+       
+       
       }
+      .categories-catalog-1{
+        .categories-catalog-2{
+          position: fixed;
+          .left-catalog{
+            li{
+              color: black;
+            }
+          }
+          .right-catalog{
+            img{
+              width: 100%;
+            }
+          }
+        }
+      }
+      
+      
     }
   }
+
+
 }
